objects/ccpt__Meeting_Action__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Action</label>
        <referenceTo>ccpt__Action__c</referenceTo>
        <relationshipLabel>Meeting Actions</relationshipLabel>
        <relationshipName>Meeting_Actions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Agenda_Item__c</fullName>
        <label>Agenda Item</label>
        <referenceTo>ccpt__Agenda_Item__c</referenceTo>
        <relationshipLabel>Meeting Actions</relationshipLabel>
        <relationshipName>Meeting_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ccpt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpt__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpt__Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>ccpt__Meeting__c</referenceTo>
        <relationshipLabel>Meeting Actions</relationshipLabel>
        <relationshipName>Meeting_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Owner_Department__c</fullName>
        <formula>ccpt__Owner__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Owner of the Action is a User (i.e not a Queue or Group) then this field is populated.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meeting_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__RelatedTo__c</fullName>
        <externalId>true</externalId>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__isPublic__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether this action is visible to all meeting attendees</inlineHelpText>
        <label>isPublic</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>